data/forge_javadoc/1.7.10/processed/net_minecraft_client_renderer_entity_RenderHorse.md
# RenderHorse

**Inheritance:** java.lang.Object → net.minecraft.client.renderer.entity.Render → net.minecraft.client.renderer.entity.RendererLivingEntity → net.minecraft.client.renderer.entity.RenderLiving → net.minecraft.client.renderer.entity.RenderHorse

## Class signature

```java
public class RenderHorse extends RenderLiving
```

## Methods

- `protected ResourceLocation getEntityTexture(Entity p_110775_1_)`
- `protected ResourceLocation getEntityTexture(EntityHorse p_110775_1_)`
- `protected void preRenderCallback(EntityHorse p_77041_1_, float p_77041_2_)`
- `protected void preRenderCallback(EntityLivingBase p_77041_1_, float p_77041_2_)`
- `protected void renderModel(EntityHorse p_77036_1_, float p_77036_2_, float p_77036_3_, float p_77036_4_, float p_77036_5_, float p_77036_6_, float p_77036_7_)`
- `protected void renderModel(EntityLivingBase p_77036_1_, float p_77036_2_, float p_77036_3_, float p_77036_4_, float p_77036_5_, float p_77036_6_, float p_77036_7_)`

## Fields

- `RenderHorse`