data/forge_javadoc/1.8.9/processed/net_minecraft_client_renderer_entity_RenderHorse.md
# RenderHorse

**Inheritance:** java.lang.Object → net.minecraft.client.renderer.entity.Render<T> → net.minecraft.client.renderer.entity.RendererLivingEntity<T> → net.minecraft.client.renderer.entity.RenderLiving<EntityHorse> → net.minecraft.client.renderer.entity.RenderHorse

## Class signature

```java
public class RenderHorse extends RenderLiving<EntityHorse>
```

## Methods

- `protected ResourceLocation getEntityTexture(EntityHorse entity)` — Returns the location of an entity's texture.
- `protected void preRenderCallback(EntityHorse entitylivingbaseIn, float partialTickTime)` — Allows the render to do any OpenGL state modifications necessary before the model is rendered.

## Fields

- `RenderHorse`